...
                                <rect key="frame" x="0.0" y="44.5" width="414" height="43.5"/>
                                <autoresizingMask key="autoresizingMask"/>
                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="MVW-kJ-nlU" id="WVW-5X-LWi">
                                    <rect key="frame" x="0.0" y="0.0" width="384.5" height="43.5"/>
                                    <autoresizingMask key="autoresizingMask"/>
                                </tableViewCellContentView>
                                <accessibility key="accessibilityConfiguration" identifier="title_cell">
                                    <bool key="isElement" value="YES"/>
                                </accessibility>
                                <connections>
                                    <segue destination="ubD-2M-mzI" kind="show" identifier="memoDetailSegue" id="cPx-iG-4Kj"/>
                                </connections>
                            </tableViewCell>
...
                        <connections>
                            <outlet property="dataSource" destination="72D-7q-ft3" id="Cy5-fQ-35H"/>
                            <outlet property="delegate" destination="72D-7q-ft3" id="zlT-gf-wxQ"/>
                        </connections>
                    </tableView>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="All memo" id="xOM-VE-Hec">
                        <barButtonItem key="rightBarButtonItem" systemItem="compose" id="gtg-Vv-mBK">
                            <connections>
                                <segue destination="LMK-uV-GOG" kind="presentation" identifier="newMemo" id="tEX-jG-mV9"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="HQz-ug-e0i">
                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                <accessibility key="accessibilityConfiguration" identifier="detail_text"/>
                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla paria
                                <color key="textColor" systemColor="labelColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                            </textView>
                        </subviews>
...
                    <view key="view" contentMode="scaleToFill" id="IQv-Im-RRt">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ajs-U5-z0B">
                                <rect key="frame" x="10" y="106" width="394" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="title_text_field"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bvk-dk-ISS">
                                <rect key="frame" x="0.0" y="76" width="414" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="MTe-J0-vOE">
                                <rect key="frame" x="20" y="181" width="374" height="611"/>
                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                <accessibility key="accessibilityConfiguration" identifier="detail_text_view"/>
                                <color key="textColor" systemColor="labelColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                            </textView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="oTT-qn-kCy"/>
...
                            <constraint firstItem="oTT-qn-kCy" firstAttribute="trailing" secondItem="bvk-dk-ISS" secondAttribute="trailing" id="m19-ei-1tU"/>
                            <constraint firstItem="oTT-qn-kCy" firstAttribute="trailing" secondItem="nYb-nr-AjX" secondAttribute="trailing" id="sTX-Ah-qQw"/>
                            <constraint firstItem="bvk-dk-ISS" firstAttribute="top" secondItem="oTT-qn-kCy" secondAttribute="top" constant="20" id="vI1-hW-pMK"/>
                            <constraint firstItem="ajs-U5-z0B" firstAttribute="leading" secondItem="oTT-qn-kCy" secondAttribute="leading" constant="10" id="wcb-Xz-GSE"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="new memo" id="S2U-t4-22I">
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="1VW-zd-5jA">
                            <connections>
                                <action selector="didTapCancelButton:" destination="7ce-ZF-hA4" id="5eQ-sM-zH6"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="cgQ-Px-Fyt">
...
